Fix bottom spacing

--- a/site/static/style.css
+++ b/site/static/style.css
@@ -73,7 +73,7 @@ h6 {
 }
 .heading .preview {
     width: 200px;
-    margin-bottom: -25em;
+    margin-bottom: calc(-200px - 25vw);
     border-radius: .5em;
     box-shadow:
         0px 0px 0px 3px #251d1a,
@@ -89,7 +89,7 @@ h6 {
 .heading .download-ps {
     display: block;
     margin: auto;
-    margin-top: 2em;
+    margin-top: 1em;
     width: 150px;
 }
 
@@ -97,9 +97,9 @@ h6 {
     position: relative;
     z-index: -1;
     margin-top: -1px;
-    margin-bottom: 22em;
+    margin-bottom: 2em;
     width: 100%;
-    height: 30vw;
+    height: 444px;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -117,10 +117,5 @@ h6 {
     }
     .heading .preview {
         width: 30vw;
-        margin-bottom: -35vw;
-    }
-
-    .divider {
-        margin-bottom: 10vw;
     }
 }
